--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.0",
+    "framer-motion": "^11.15.0",
     "primereact": "^10.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.27.0",
     "rechart": "^0.0.1",
     "recharts": "^2.13.3"
