--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_URI=mongodb+srv://bentot123:bentot111@cluster0.luspb.mongodb.net/crmsDb?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET_KEY=mysecretkey123456789
-
+API_URL=http://localhost:5000
