--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MONGO_URI=mongodb+srv://bentot123:bentot111@cluster0.luspb.mongodb.net/crmsDb?re
 PORT=5000
 JWT_SECRET_KEY=mysecretkey123456789
 API_URL=http://localhost:5000
+EMAIL_USER=benaniasco0998@gmail.com
+EMAIL_PASS=apxxgazzhzsoolcc
+CLIENT_URL=http://localhost:5173
