--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.9.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "socket.io": "^4.8.1",
     "validator": "^13.12.0"
   },
